--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
     top: 1%;
     left: 1%;
     box-sizing: border-box;
-    border: 2px solid #2b2b2b1A;
+    border: 2px solid #2b2b2b;
     border-radius: 25px;
     padding: 10px;
     z-index: 9999;
