--- a/index.css
+++ b/index.css
@@ -12,10 +12,25 @@
     background-color: black;
     color: #2b2b2b;
     justify-content: center;
-    align-items: center;
+    align-items: left;
     width: 20%;
+    min-width: 225px;
+    max-width: 300px;
 }
 
 .slider{
     width: 90%;
+}
+
+#controlSceneStart {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+}
+
+.controlInfoPanel {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
