--- a/index.css
+++ b/index.css
@@ -1,21 +1,6 @@
-.ControlAccessPanel {
-    position: fixed;
+#ControlAccessPanel {
     display: flex;
     flex-direction: column;
-    top: 1%;
-    left: 1%;
-    box-sizing: border-box;
-    border: 2px solid #2b2b2b;
-    border-radius: 25px;
-    padding: 10px;
-    z-index: 9999;
-    background-color: black;
-    color: #2b2b2b;
-    justify-content: center;
-    align-items: left;
-    width: 20%;
-    min-width: 225px;
-    max-width: 300px;
 }
 
 .slider{
@@ -33,4 +18,24 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+}
+
+.FullAccessPanel {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    top: 1%;
+    left: 1%;
+    box-sizing: border-box;
+    border: 2px solid #2b2b2b;
+    border-radius: 25px;
+    padding: 10px;
+    z-index: 9999;
+    background-color: black;
+    color: #2b2b2b;
+    justify-content: center;
+    align-items: left;
+    width: 20%;
+    min-width: 225px;
+    max-width: 300px;
 }
